# bitcoin_library

./: .gitignore  Makefile  README.md  ecc.py  pyproject.toml
py_bitcoin/: ecc.py  transactions.py  utils.py
tests/: test_ell_curves.py  test_ell_curves_over_fin_fields.py  test_finite_fields.py  test_private_key.py  test_signature.py
