[tool.poetry]
name = "Bitcoin library"
version = "0.0.1"
description = "Bitcoin implementation in Python"
authors = ["Vasiliy Ivanov"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
