[tool.poetry]
name = "Bitcoin library"
version = "0.0.1"
description = "Bitcoin implementation in Python"
authors = ["Vasiliy Ivanov"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
